# insurance-manager

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile.backend  MVP_COMPLETE.md  MVP_README.md  MVP_SUMMARY.md  PLAYWRIGHT_TESTING_RESULTS.md  PROJECT_STATUS.md  README.md  TESTING_ACTION_PLAN.md  alembic.ini  docker-compose.yml  example.env  insurance_manager_ai_development_rules.md  insurance_manager_comprehensive_project_blueprint.md  insurance_manager_todo_checklist.md  playwright_testing_assessment.md  prompt.md  pyproject.toml  requirements.txt  semester_cli.py  start_complete_mvp.sh  start_mvp.sh  testing_results_summary.md
.cursor/rules/: project-rules.mdc
api/: auth_utils.py  health_check.py  main.py
api/v1/: auth.py  game.py  health.py
config/semester_configs/: 2024_spring.yaml  example_semester.yaml  mvp_2024.yaml  schema.yaml
core/: celery_app.py  config.py  config_loader.py  database.py  seed_data.py  semester_lifecycle.py  semester_management.py
core/engine/: __init__.py  plugin_manager.py
core/events/: __init__.py  event_bus.py
core/interfaces/: __init__.py  game_system.py
core/models/: __init__.py  audit_log.py  audit_partitioning.sql  base.py  ceo.py  company.py  company_line_of_business.py  company_state_authorization.py  employee.py  feature_flag.py  game_configuration.py  game_event.py  investment_portfolio.py  line_of_business.py  liquidation_event.py  market_condition.py  price_decision.py  product.py  turn.py  (+7 more)
frontend/: .dockerignore  .eslintrc.js  .prettierignore  .prettierrc.json  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
migrations/: env.py
scripts/: README.md  load_initial_data.py  test_db_connection.py
simulations/: __init__.py
(+116 files in other folders)
